fix: set align-items of main to flex-start

--- a/styles/pages/Page.module.scss
+++ b/styles/pages/Page.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
   .row {
